--- a/app/src/main/res/layout/item_album.xml
+++ b/app/src/main/res/layout/item_album.xml
@@ -1,12 +1,12 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+        xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
         <variable
-            name="postitemsviewmodel"
-            type="com.example.yasma.viewmodel.PostItemsViewModel"/>
+            name="albumitemsviewmodel"
+            type="com.example.yasma.viewmodel.AlbumItemsViewModel"/>
     </data>
 
 
@@ -16,22 +16,20 @@
         android:padding="@dimen/fab_margin"
         android:layout_margin="@dimen/fab_margin"
         android:background="?attr/selectableItemBackground">
-        <!--android:onClick="@{postitemsviewmodel::onItemClick}"-->
+        <!--android:onClick="@{albumitemsviewmodel::onItemClick}"-->
 
         <TextView
             android:id="@+id/title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
-            android:text="@{postitemsviewmodel.title}"
+            android:text="@{albumitemsviewmodel.title}"
             android:textColor="@android:color/primary_text_light"
             android:textSize="16sp"
             android:textStyle="bold"
-        />
-
+            />
         <View android:layout_width="match_parent" android:layout_height="2dp"
               android:background="@android:color/black"/>
-
 
     </RelativeLayout>
 
