--- a/app/src/main/res/layout/fragment_albums.xml
+++ b/app/src/main/res/layout/fragment_albums.xml
@@ -14,8 +14,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-
-
         <android.support.design.widget.TabLayout
             android:layout_width="match_parent"
             android:layout_height="50dp"
@@ -32,7 +30,7 @@
             android:clipToPadding="false"
             android:scrollbars="vertical"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            tools:listitem="@layout/item_post" />
+            tools:listitem="@layout/item_album" />
     </android.support.design.widget.CoordinatorLayout>
 
 </layout>
