--- a/app/src/main/res/layout/item_album.xml
+++ b/app/src/main/res/layout/item_album.xml
@@ -1,6 +1,6 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+       >
 
     <data>
 
@@ -11,25 +11,27 @@
 
 
     <RelativeLayout
+        android:id="@+id/rv_album"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="@dimen/fab_margin"
-        android:layout_margin="@dimen/fab_margin"
-        android:background="?attr/selectableItemBackground">
-        <!--android:onClick="@{albumitemsviewmodel::onItemClick}"-->
+        android:background="?attr/selectableItemBackground"
+        android:onClick="@{albumitemsviewmodel::onItemClick}">
 
         <TextView
             android:id="@+id/title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
-            android:text="@{albumitemsviewmodel.title}"
+            android:text='@{albumitemsviewmodel.title}'
             android:textColor="@android:color/primary_text_light"
             android:textSize="16sp"
-            android:textStyle="bold"
+            android:padding="@dimen/fab_margin"
+            android:layout_margin="@dimen/fab_margin"
+            tools:text="mr gary allen"
             />
         <View android:layout_width="match_parent" android:layout_height="2dp"
-              android:background="@android:color/black"/>
+              android:background="@android:color/black"
+            android:layout_below="@+id/title"/>
 
     </RelativeLayout>
 
