--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -1,5 +1,4 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
@@ -11,26 +10,28 @@
 
 
     <RelativeLayout
+        android:id="@+id/rv_post"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="@dimen/fab_margin"
-        android:layout_margin="@dimen/fab_margin"
-        android:background="?attr/selectableItemBackground">
-        <!--android:onClick="@{postitemsviewmodel::onItemClick}"-->
+        android:background="?attr/selectableItemBackground"
+        android:onClick="@{postitemsviewmodel::onItemClick}">
 
         <TextView
             android:id="@+id/title"
+            android:layout_margin="@dimen/fab_margin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
+            android:padding="@dimen/fab_margin"
             android:text="@{postitemsviewmodel.title}"
             android:textColor="@android:color/primary_text_light"
             android:textSize="16sp"
-            android:textStyle="bold"
-        />
+            tools:text="mr gary allen"
+            />
 
         <View android:layout_width="match_parent" android:layout_height="2dp"
-              android:background="@android:color/black"/>
+              android:background="@android:color/black"
+            android:layout_below="@+id/title"/>
 
 
     </RelativeLayout>
