Full screen image implementation

--- a/app/src/main/res/layout/item_album_details.xml
+++ b/app/src/main/res/layout/item_album_details.xml
@@ -20,6 +20,7 @@
             android:id="@+id/image_post"
             android:layout_width="80dp"
             android:layout_height="80dp"
+            android:onClick="@{itemalbumdetailsviewmodel::onItemClick}"
             tools:imageUrl="@{itemalbumdetailsviewmodel.pictureProfile}"/>
 
         <TextView
